<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <io.legado.app.lib.prefs.IconListPreference
        android:defaultValue="ic_launcher"
        android:entries="@array/icon_names"
        android:entryValues="@array/icons"
        android:key="launcherIcon"
        android:summary="@string/change_icon_summary"
        android:title="@string/change_icon"
        app:iconSpaceReserved="false"
        app:icons="@array/icons" />

    <io.legado.app.lib.prefs.NameListPreference
        android:defaultValue="glass"
        android:key="bottomBarEffectMode"
        android:title="@string/bottom_bar_effect_mode"
        app:entries="@array/bottom_bar_effect_mode_entries"
        app:entryValues="@array/bottom_bar_effect_mode_values"
        app:iconSpaceReserved="false" />

    <io.legado.app.lib.prefs.Preference
        android:key="liquidGlassLevel"
        android:summary="@string/liquid_glass_level_summary"
        android:title="@string/liquid_glass_level"
        app:iconSpaceReserved="false" />

    <io.legado.app.lib.prefs.Preference
        android:key="frostedGlassLevel"
        android:summary="@string/frosted_glass_level_summary"
        android:title="@string/frosted_glass_level"
        app:iconSpaceReserved="false" />

    <io.legado.app.lib.prefs.Preference
        android:key="fontScale"
        android:summary="@string/font_scale_summary"
        android:title="@string/font_scale"
        app:iconSpaceReserved="false" />

</androidx.preference.PreferenceScreen>
