<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipToPadding="false"
    android:fillViewport="false"
    android:overScrollMode="ifContentScrolls">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="12dp"
        android:paddingTop="10dp"
        android:paddingEnd="12dp"
        android:paddingBottom="16dp">

    <LinearLayout
        android:id="@+id/panel_text_tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="12dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp">

        <io.legado.app.ui.book.read.config.TextFontWeightConverter
            android:id="@+id/text_font_weight_converter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="6dp"
            android:paddingTop="4dp"
            android:paddingRight="6dp"
            android:paddingBottom="4dp"
            android:textSize="14sp"
            app:isBottomBackground="true"
            app:radius="3dp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <io.legado.app.ui.widget.text.StrokeTextView
            android:id="@+id/tv_text_font"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="6dp"
            android:paddingTop="4dp"
            android:paddingRight="6dp"
            android:paddingBottom="4dp"
            android:text="@string/text_font"
            android:textSize="14sp"
            app:isBottomBackground="true"
            app:radius="3dp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <io.legado.app.ui.widget.text.StrokeTextView
            android:id="@+id/tv_text_indent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="6dp"
            android:paddingTop="4dp"
            android:paddingRight="6dp"
            android:paddingBottom="4dp"
            android:text="@string/text_indent"
            android:textSize="14sp"
            app:isBottomBackground="true"
            app:radius="3dp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <io.legado.app.ui.book.read.config.ChineseConverter
            android:id="@+id/chinese_converter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="6dp"
            android:paddingTop="4dp"
            android:paddingRight="6dp"
            android:paddingBottom="4dp"
            android:textSize="14sp"
            app:isBottomBackground="true"
            app:radius="3dp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <io.legado.app.ui.widget.text.StrokeTextView
            android:id="@+id/tv_padding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="6dp"
            android:paddingTop="4dp"
            android:paddingRight="6dp"
            android:paddingBottom="4dp"
            android:text="@string/padding"
            android:textSize="14sp"
            app:isBottomBackground="true"
            app:radius="3dp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <io.legado.app.ui.widget.text.StrokeTextView
            android:id="@+id/tv_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="6dp"
            android:paddingTop="4dp"
            android:paddingRight="6dp"
            android:paddingBottom="4dp"
            android:text="@string/information"
            android:textSize="14sp"
            app:isBottomBackground="true"
            app:radius="3dp" />

    </LinearLayout>

    <io.legado.app.ui.widget.DetailSeekBar
        android:id="@+id/dsb_text_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:isBottomBackground="true"
        app:max="45"
        app:title="@string/text_size" />

    <io.legado.app.ui.widget.DetailSeekBar
        android:id="@+id/dsb_text_letter_spacing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:isBottomBackground="true"
        app:max="100"
        app:title="@string/text_letter_spacing" />

    <io.legado.app.ui.widget.DetailSeekBar
        android:id="@+id/dsb_line_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:isBottomBackground="true"
        app:max="20"
        app:title="@string/line_size" />

    <io.legado.app.ui.widget.DetailSeekBar
        android:id="@+id/dsb_paragraph_spacing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:isBottomBackground="true"
        app:max="20"
        app:title="@string/paragraph_size" />

    <LinearLayout
        android:id="@+id/panel_page_anim"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="vertical"
        android:paddingTop="12dp"
        android:paddingBottom="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_page_anim"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginBottom="4dp"
                android:layout_weight="1"
                android:alpha="0.75"
                android:text="@string/page_anim"
                android:textSize="12sp" />

        </LinearLayout>

        <RadioGroup
            android:id="@+id/rg_page_anim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="11dp"
            android:gravity="center"
            android:orientation="horizontal">

            <io.legado.app.lib.theme.view.ThemeRadioNoButton
                android:id="@+id/rb_anim0"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:button="@null"
                android:gravity="center"
                android:padding="5dp"
                android:singleLine="true"
                android:text="@string/page_anim_cover"
                app:isBottomBackground="true" />

            <io.legado.app.lib.theme.view.ThemeRadioNoButton
                android:id="@+id/rb_anim1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:button="@null"
                android:gravity="center"
                android:padding="5dp"
                android:singleLine="true"
                android:text="@string/page_anim_slide"
                app:isBottomBackground="true" />

            <io.legado.app.lib.theme.view.ThemeRadioNoButton
                android:id="@+id/rb_simulation_anim"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:button="@null"
                android:gravity="center"
                android:padding="5dp"
                android:singleLine="true"
                android:text="@string/page_anim_simulation"
                app:isBottomBackground="true" />

            <io.legado.app.lib.theme.view.ThemeRadioNoButton
                android:id="@+id/rb_scroll_anim"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:button="@null"
                android:gravity="center"
                android:padding="5dp"
                android:singleLine="true"
                android:text="@string/page_anim_scroll"
                app:isBottomBackground="true" />

            <io.legado.app.lib.theme.view.ThemeRadioNoButton
                android:id="@+id/rb_no_anim"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:button="@null"
                android:gravity="center"
                android:padding="5dp"
                android:singleLine="true"
                android:text="@string/page_anim_none"
                app:isBottomBackground="true" />

        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/panel_style_library"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="vertical"
        android:paddingTop="12dp"
        android:paddingBottom="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_bg_ts"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_weight="1"
                android:alpha="0.75"
                android:text="@string/text_bg_style"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_share_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/share_layout" />

            <io.legado.app.ui.widget.checkbox.SmoothCheckBox
                android:id="@+id/cb_share_layout"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="12dp" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:clipToPadding="false"
            android:orientation="horizontal"
            android:paddingHorizontal="12dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tool:listitem="@layout/item_read_style" />

    </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
