<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <io.legado.app.ui.widget.TitleBar
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:attachToActivity="false"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/bookshelf" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btn_bookshelf_layout_toggle"
        android:layout_width="@dimen/discover_top_action_button_size"
        android:layout_height="@dimen/discover_top_action_button_size"
        android:layout_marginEnd="@dimen/discover_top_action_button_size"
        android:background="@drawable/bg_discover_embedded_action"
        android:contentDescription="@string/switchLayout"
        android:padding="@dimen/discover_top_action_button_padding"
        android:scaleType="centerInside"
        android:src="@drawable/ic_lucide_layout_grid"
        android:tint="@color/primaryText"
        app:layout_constraintBottom_toBottomOf="@id/title_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/title_bar" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btn_bookshelf_read_record"
        android:layout_width="@dimen/discover_top_action_button_size"
        android:layout_height="@dimen/discover_top_action_button_size"
        android:layout_marginEnd="10dp"
        android:background="@drawable/bg_discover_embedded_action"
        android:contentDescription="@string/read_record"
        android:padding="@dimen/discover_top_action_button_padding"
        android:scaleType="centerInside"
        android:src="@drawable/ic_lucide_chart_bar"
        android:tint="@color/primaryText"
        app:layout_constraintBottom_toBottomOf="@id/title_bar"
        app:layout_constraintEnd_toStartOf="@id/btn_bookshelf_layout_toggle"
        app:layout_constraintTop_toTopOf="@id/title_bar" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/title_bar"
        app:layout_constraintBottom_toBottomOf="parent">

        <io.legado.app.ui.widget.recycler.RecyclerViewAtPager2
            android:id="@+id/rv_bookshelf"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            tools:listitem="@layout/item_bookshelf_list" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <TextView
        android:id="@+id/tv_empty_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:gravity="center"
        android:text="@string/bookshelf_empty"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/title_bar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:text="TextView" />

</androidx.constraintlayout.widget.ConstraintLayout>
